Highlight top and bottom scores per completionist subcategory

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,11 +92,11 @@
 	.neutral {
 		display: none;
 	}
-	tbody .good {
+	.top {
 		color: #116329;
 		background: #DAFBE1;
 	}
-	tbody .bad {
+	.bottom {
 		color: #82071E;
 		background: #FFEBE9;
 	}
