Add category descriptions

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,4 +122,5 @@
 <meta name="referrer" content="no-referrer">
 <meta name="robots" content="noindex">
 <h1>Tibia highscores: %%%CATEGORY%%%</h1>
+<p>%%%DESCRIPTION%%%</p>
 %%%DATA%%%
