Support `:target` highlights

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,9 @@
 		background-color: var(--link-hover-background);
 		color: var(--link-color-alt);
 	}
+	tr:target {
+    border: 5px solid var(--yellow);
+	}
 	a {
 		color: var(--link-color);
 	}
