Improve dark mode styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
 	}
 	tbody tr:hover a, a:hover, a:focus {
 		color: var(--link-color-alt);
+		background-color: var(--link-hover-background);
 	}
 	td {
 		text-align: right;
